Fixing Layout and Footer

--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/changePassword.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/changePassword.html
@@ -1,48 +1,49 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6"
+      lang="en">
 <head th:replace="~{fragment/head :: head}">
 </head>
-<body>
-	<nav th:replace="~{fragment/navbar :: navbar}"></nav>
-	<div class="container">
-		<h2 class="my-3 text-primary">Change Password</h2>
+<body class="d-flex flex-column min-vh-100">
+<nav th:replace="~{fragment/navbar :: navbar}"></nav>
+<div class="container flex-grow-1">
+    <h2 class="my-3 text-primary">Change Password</h2>
 
-		<div class="alert"
-			th:classappend="${changedSuccessfully} ? 'alert-success' : 'alert-danger'"
-			th:if="${changingPassword}">
-			<span th:text="${message}"></span>
-		</div>
+    <div class="alert"
+         th:classappend="${changedSuccessfully} ? 'alert-success' : 'alert-danger'"
+         th:if="${changingPassword}">
+        <span th:text="${message}"></span>
+    </div>
 
-		<form class="card p-2" th:action="@{'/users/updatePassword'}"
-			method="post" th:object="${pojo}">
-			<input type="hidden" th:name="${_csrf.parameterName}"
-				th:value="${_csrf.token}" /> <input type="hidden" name="userId"
-				th:value="${userId}" />
+    <form class="card p-2" th:action="@{'/users/updatePassword'}"
+          method="post" th:object="${pojo}">
+        <input type="hidden" th:name="${_csrf.parameterName}"
+               th:value="${_csrf.token}"/> <input type="hidden" name="userId"
+                                                  th:value="${userId}"/>
 
-			<div>
-				<label for="currentPassword">Current Password</label> <input
-					type="password" class="form-control" id="currentPassword"
-					name="currentPassword" th:field="*{currentPassword}" required />
-			</div>
-			<br />
-			<div>
-				<label for="newPassword">New Password</label> <input
-					type="password" class="form-control" id="newPassword"
-					name="newPassword" th:field="*{newPassword}" required />
-			</div>
-			<br />
-			<div>
-				<label for="confirmPassword">Confirm Password</label> <input
-					type="password" class="form-control" id="confirmPassword"
-					name="confirmPassword" th:field="*{confirmPassword}" required />
-			</div>
-			<br />
-			<div>
-				<button class="btn btn-primary" type="submit">Change</button>
-				<button class="btn btn-danger" type="reset">Clean</button>
-			</div>
-		</form>
-	</div>
-	<footer th:replace="~{fragment/footer :: footer}"></footer>
+        <div>
+            <label for="currentPassword">Current Password</label> <input
+                type="password" class="form-control" id="currentPassword"
+                name="currentPassword" th:field="*{currentPassword}" required/>
+        </div>
+        <br/>
+        <div>
+            <label for="newPassword">New Password</label> <input
+                type="password" class="form-control" id="newPassword"
+                name="newPassword" th:field="*{newPassword}" required/>
+        </div>
+        <br/>
+        <div>
+            <label for="confirmPassword">Confirm Password</label> <input
+                type="password" class="form-control" id="confirmPassword"
+                name="confirmPassword" th:field="*{confirmPassword}" required/>
+        </div>
+        <br/>
+        <div>
+            <button class="btn btn-primary" type="submit">Change</button>
+            <button class="btn btn-danger" type="reset">Clean</button>
+        </div>
+    </form>
+</div>
+<footer th:replace="~{fragment/footer :: footer}"></footer>
 </body>
 </html>
