--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/settings.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/settings.html
@@ -88,6 +88,8 @@
     </div>
 </div>
 
+<footer th:replace="~{fragment/footer :: footer}"></footer>
+
 </body>
 <script th:src="@{/js/toastui-editor-all.min.js}"></script>
 <script>
