--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users.html
@@ -1,80 +1,82 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6"
+      lang="en">
 <head th:replace="~{fragment/head :: head}">
 </head>
-<body>
-	<nav th:replace="~{fragment/navbar :: navbar}"></nav>
-	<div class="container-fluid my-2">
-		<div class="row">
-			<div class="col-md-10 mx-auto">
-				<h2 class="my-3 text-primary">Manager Users</h2>
+<body class="d-flex flex-column min-vh-100">
+<nav th:replace="~{fragment/navbar :: navbar}"></nav>
+<div class="container-fluid my-2 flex-grow-1">
+    <div class="row">
+        <div class="col-md-10 mx-auto">
+            <h2 class="my-3 text-primary">Manage Users</h2>
 
-				<div class="alert"
-					th:classappend="${savedSuccessfully} ? 'alert-success' : 'alert-danger'"
-					th:if="${savingUser}">
-					<span th:text="${message}"></span>
-				</div>
-				<div class="alert"
-					th:classappend="${deletedSuccessfully} ? 'alert-success' : 'alert-danger'"
-					th:if="${deletingUser}">
-					<span th:text="${message}"></span>
-				</div>
-				<div class="alert alert-danger" th:if="${updatingUser}">
-					<span th:text="${message}"></span>
-				</div>
+            <div class="alert"
+                 th:classappend="${savedSuccessfully} ? 'alert-success' : 'alert-danger'"
+                 th:if="${savingUser}">
+                <span th:text="${message}"></span>
+            </div>
+            <div class="alert"
+                 th:classappend="${deletedSuccessfully} ? 'alert-success' : 'alert-danger'"
+                 th:if="${deletingUser}">
+                <span th:text="${message}"></span>
+            </div>
+            <div class="alert alert-danger" th:if="${updatingUser}">
+                <span th:text="${message}"></span>
+            </div>
 
-				<!-- Table Start -->
-				<div th:replace="~{fragment/table :: table(${userResult},${tableUrl},~{::#table})}">
-					<table class="table table-hover" id="table">
-						<thead>
-							<tr>
-								<th scope="col">Photo</th>
-								<th scope="col">First Name</th>
-								<th scope="col">Last Name</th>
-								<th scope="col">Email</th>
-								<th scope="col">Roles</th>
-								<th scope="col">Enabled</th>
-								<th scope="col"><a class="btn btn-light"
-									th:href="@{${tableUrl.getCsvUrl()}}"> <img alt="csv"
-										th:src="@{'/image/csv.svg'}" class="icon" />
-								</a> <a th:href="@{${tableUrl.getCreatePageUrl()}}" class="btn btn-dark"> <img
-										alt="plus" th:src="@{'/image/plus.svg'}" class="icon" />
-								</a></th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr th:each="user:${userResult.data}">
-								<td><img alt="user"
-									th:src="@{${user.photo == null || user.photo.equals('default_user.svg') ? '/images/user/default.svg' : '/images/user/'+user.photo}}"
-									width="50" height="50" /></td>
-								<td th:text="${user.firstname}"></td>
-								<td th:text="${user.lastname}"></td>
-								<td th:text="${user.email}"></td>
-								<td th:text="${user.roles}"></td>
-								<td><img class="icon"
-									th:src="@{${user.enabled} ? '/image/green.svg' : '/image/red.svg'}"
-									alt="status" /></td>
-								<td>
-									<!-- Edit Button --> <a
-									th:href="@{/users/update_page/{id}(id=${user.id})}"
-									class="btn btn-warning"> <img class="icon" alt="edit"
-										th:src="@{'/image/edit.svg'}" /> <!-- Change Password -->
-								</a> <a th:href="@{/users/changePassword/{id}(id=${user.id})}"
-									class="btn btn-info"> <img class="icon" alt="password"
-										th:src="@{'/image/password.svg'}" /> <!-- Delete -->
-								</a> <a th:href="@{/users/delete/{id}(id=${user.id})}"
-									class="btn btn-danger"> <img class="icon" alt="delete"
-										th:src="@{'/image/delete.svg'}" />
-								</a>
-								</td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-				<!-- Table end  -->
-			</div>
-		</div>
-	</div>
-	<!-- <footer th:replace="~{fragment/footer :: footer}"></footer>  -->
+            <!-- Table Start -->
+            <div th:replace="~{fragment/table :: table(${userResult},${tableUrl},~{::#table})}">
+                <table class="table table-hover" id="table">
+                    <thead>
+                    <tr>
+                        <th scope="col">Photo</th>
+                        <th scope="col">First Name</th>
+                        <th scope="col">Last Name</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Roles</th>
+                        <th scope="col">Enabled</th>
+                        <th scope="col"><a class="btn btn-light"
+                                           th:href="@{${tableUrl.getCsvUrl()}}"> <img alt="csv"
+                                                                                      th:src="@{'/image/csv.svg'}"
+                                                                                      class="icon"/>
+                        </a> <a th:href="@{${tableUrl.getCreatePageUrl()}}" class="btn btn-dark"> <img
+                                alt="plus" th:src="@{'/image/plus.svg'}" class="icon"/>
+                        </a></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="user:${userResult.data}">
+                        <td><img alt="user"
+                                 th:src="@{${user.photo == null || user.photo.equals('default_user.svg') ? '/images/user/default.svg' : '/images/user/'+user.photo}}"
+                                 width="50" height="50"/></td>
+                        <td th:text="${user.firstname}"></td>
+                        <td th:text="${user.lastname}"></td>
+                        <td th:text="${user.email}"></td>
+                        <td th:text="${user.roles}"></td>
+                        <td><img class="icon"
+                                 th:src="@{${user.enabled} ? '/image/green.svg' : '/image/red.svg'}"
+                                 alt="status"/></td>
+                        <td>
+                            <!-- Edit Button --> <a
+                                th:href="@{/users/update_page/{id}(id=${user.id})}"
+                                class="btn btn-warning"> <img class="icon" alt="edit"
+                                                              th:src="@{'/image/edit.svg'}"/> <!-- Change Password -->
+                        </a> <a th:href="@{/users/changePassword/{id}(id=${user.id})}"
+                                class="btn btn-info"> <img class="icon" alt="password"
+                                                           th:src="@{'/image/password.svg'}"/> <!-- Delete -->
+                        </a> <a th:href="@{/users/delete/{id}(id=${user.id})}"
+                                class="btn btn-danger"> <img class="icon" alt="delete"
+                                                             th:src="@{'/image/delete.svg'}"/>
+                        </a>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+            <!-- Table end  -->
+        </div>
+    </div>
+</div>
+<footer th:replace="~{fragment/footer :: footer}"></footer>
 </body>
 </html>
