--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/loginPage.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/loginPage.html
@@ -2,10 +2,10 @@
 <html xmlns:th="https://www.thymeleaf.org" lang="en">
 <head th:replace="~{fragment/head :: head}">
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
 	<nav th:replace="~{fragment/unauthorizedNavbar :: unauthorizedNavbar}"></nav>
 
-	<div class="container">
+	<div class="container flex-grow-1">
 		<div class="row">
 			<div class="col-md-6 card mx-auto mt-4 p-3">
 				<h3
