--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/create_user.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/create_user.html
@@ -22,8 +22,7 @@
 					</div>
 					<input type="hidden" th:name="${_csrf.parameterName}"
 						th:value="${_csrf.token}" /> <input type="hidden" name="id"
-						th:value="*{id}" /> <input type="hidden" name="updating"
-						th:value="${updatingUser}" />
+						th:value="*{id}" />
 					<div>
 						<label for="firstname">First Name</label> <input type="text"
 							class="form-control" name="firstname" id="firstname"
@@ -46,7 +45,7 @@
 						<label for="password">Password</label> <input type="password"
 							class="form-control" name="password" id="password"
 							th:field="*{password}" min="6" max="25" required
-							th:disabled="${updatingUser}" />
+							th:disabled="${user.id > 0}" />
 					</div>
 					<br />
 					<div>
