--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/view_product.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/view_product.html
@@ -28,8 +28,10 @@
                 <div class="col-md-9 bg-light d-flex flex-column justify-content-center p-2">
                     <h1 th:text="${product.name}"></h1>
                     <p class="text-muted"><span th:text="${product.category}"></span> | <span
-                            th:text="${product.brand}"></span> | <span th:text="${product.updatedTime}"></span></p>
-                    <p th:text="${product.shortDescription}"></p>
+                            th:text="${product.brand}"></span> | <span
+                            th:text="${#temporals.format(product.updatedTime, 'yyyy-MM-dd HH:mm')}"></span>
+                    </p>
+                    <p th:utext="${product.shortDescription}"></p>
                     <hr>
                     <div>
                         <p class="m-0">
@@ -61,8 +63,8 @@
                     </ul>
                 </div>
             </div>
-            <div class="row my-2 bg-light">
-                <p th:text="${product.fullDescription}" class="lead"></p>
+            <div class="row my-2 bg-light p-3">
+                <p th:utext="${product.fullDescription}" class="lead"></p>
             </div>
             <div class="row">
                 <table class="table table-striped">
