--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/view_product.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/view_product.html
@@ -3,9 +3,9 @@
       lang="en">
 <head th:replace="~{fragment/head :: head}">
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
 <nav th:replace="~{fragment/navbar :: navbar}"></nav>
-<div class="container">
+<div class="container flex-grow-1">
     <div class="row">
         <div class="col-md-11 mx-auto mt-4 card card-body">
             <div class="row">
@@ -74,7 +74,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row my-2 bg-light">
+            <div class="row my-2 bg-light p-3">
                 <p th:utext="${product.fullDescription}" class="lead"></p>
             </div>
             <div class="row">
