Bug Fix on going

--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/settings.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/settings.html
@@ -3,10 +3,10 @@
       lang="en">
 <head th:replace="~{fragment/head :: head}">
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
 <nav th:replace="~{fragment/navbar :: navbar}"></nav>
 
-<div class="container-fluid">
+<div class="container-fluid flex-grow-1">
     <div class="row my-2">
         <div class="col-sm-12 col-md-8 mx-auto card p-2">
             <h2
