--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/fragment/head.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/fragment/head.html
@@ -7,5 +7,5 @@
     <link rel="stylesheet" th:href="@{/css/style.css}"/>
 
     <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
-    <script th:src="@{/js/jquery-3.7.1.min.js}"></script>
+<!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>-->
 </head>
