--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/loginPage.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/loginPage.html
@@ -3,50 +3,56 @@
 <head th:replace="~{fragment/head :: head}">
 </head>
 <body class="d-flex flex-column min-vh-100">
-	<nav th:replace="~{fragment/unauthorizedNavbar :: unauthorizedNavbar}"></nav>
+<nav th:replace="~{fragment/unauthorizedNavbar :: unauthorizedNavbar}"></nav>
 
-	<div class="container flex-grow-1">
-		<div class="row">
-			<div class="col-md-6 card mx-auto mt-4 p-3">
-				<h3
-					class="text-primary text-center my-2 d-flex justify-content-center align-items-center">
-					<img th:src="@{/image/login.svg}" width="35" height="35"
-						class="me-1" alt="login" /> <span>Login To Your Account</span>
-				</h3>
-				<div th:if="${param.error}"
-					class="alert alert-danger my-2 text-center">Invalid username
-					and password.</div>
-				<div th:if="${param.logout}"
-					class="alert alert-success my-2 text-center">You have been
-					logged out.</div>
-				<form method="post" th:action="@{/login}">
-					<input type="hidden" th:name="${_csrf.parameterName}"
-						th:value="${_csrf.token}" />
-					<div>
-						<label for="username">Username</label> <input type="email"
-							class="form-control" id="username" name="username" required />
-					</div>
-					<br />
-					<div>
-						<label for="password">Password</label> <input type="password"
-							class="form-control" id="password" name="password" required />
-					</div>
-					<br />
-					<div>
-						<input type="checkbox" name="remember-me" id="remember-me"/>
-						<label for="remember-me">Remember me</label>
-					</div>
-					<br/>
-					<div>
-						<button class="btn btn-primary" type="submit">Login</button>
-						<button class="btn btn-primary" type="reset">Clean</button>
-					</div>
-				</form>
-				<p>Do not have an account? <a class="" th:href="@{/customer/registerPage}">Register Here</a>.</p>
-			</div>
-		</div>
-	</div>
+<div class="container flex-grow-1">
+    <div class="row">
+        <div class="col-md-6 card mx-auto mt-4 p-3">
+            <h3
+                    class="text-primary text-center my-2 d-flex justify-content-center align-items-center">
+                <img th:src="@{/image/login.svg}" width="35" height="35"
+                     class="me-1" alt="login"/> <span>Login To Your Account</span>
+            </h3>
+            <div th:if="${param.error}"
+                 class="alert alert-danger my-2 text-center">Invalid username
+                and password.
+            </div>
+            <div th:if="${param.logout}"
+                 class="alert alert-success my-2 text-center">You have been
+                logged out.
+            </div>
+            <form method="post" th:action="@{/login}">
+                <input type="hidden" th:name="${_csrf.parameterName}"
+                       th:value="${_csrf.token}"/>
+                <div>
+                    <label for="username">Username</label> <input type="email"
+                                                                  class="form-control" id="username" name="username"
+                                                                  required/>
+                </div>
+                <br/>
+                <div>
+                    <label for="password">Password</label> <input type="password"
+                                                                  class="form-control" id="password" name="password"
+                                                                  required/>
+                </div>
+                <br/>
+                <div>
+                    <input type="checkbox" name="remember-me" id="remember-me"/>
+                    <label for="remember-me">Remember me</label>
+                </div>
+                <br/>
+                <div>
+                    <button class="btn btn-primary" type="submit">Login</button>
+                    <button class="btn btn-primary" type="reset">Clean</button>
+                </div>
+            </form>
+            <p>Do not have an account? <a th:href="@{/customer/registerPage}">Register Here</a>. Or
+                <a href="#">Forgot Password</a>
+            </p>
+        </div>
+    </div>
+</div>
 
-	<footer th:replace="~{fragment/footer :: footer}"></footer>
+<footer th:replace="~{fragment/footer :: footer}"></footer>
 </body>
 </html>
