--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragment/head.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/fragment/head.html
@@ -3,11 +3,11 @@
     <meta http-equiv="Content-Type" content="width=device-width,initial-scale=1.0,minimum-scale=1.0"/>
     <link rel="icon" type="image/x-icon" th:href="@{/image/logo.webp}">
     <title>Shopme Admin</title>
-    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
     <link rel="stylesheet" th:href="@{/css/toastui-editor.min.css}"/>
-    <link rel="stylesheet" th:href="@{/css/style.css}"/>
 
-    <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
+    <link rel="stylesheet" th:href="@{'/webjars/bootstrap/5.3.8/css/bootstrap.min.css'}"/>
+    <link rel="stylesheet" th:href="@{/css/style.css}"/>
+    <script th:src="@{'/webjars/bootstrap/5.3.8/js/bootstrap.bundle.min.js'}" type="application/javascript"></script>
     <script>
         // Select all nav links
         const navLinks = document.querySelectorAll('.nav-link');
