--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/fragment/head.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/fragment/head.html
@@ -3,9 +3,8 @@
     <meta http-equiv="Content-Type" content="width=device-width,initial-scale=1.0,minimum-scale=1.0"/>
     <link rel="icon" type="image/x-icon" th:href="@{/image/logo.webp}">
     <title th:text="${SITE_NAME}"></title>
-    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" th:href="@{/css/style.css}"/>
 
-    <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
-<!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>-->
+    <link rel="stylesheet" th:href="@{'/webjars/bootstrap/5.3.8/css/bootstrap.min.css'}"/>
+    <link rel="stylesheet" th:href="@{/css/style.css}"/>
+    <script th:src="@{'/webjars/bootstrap/5.3.8/js/bootstrap.bundle.min.js'}" type="application/javascript"></script>
 </head>
