--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/fragment/head.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/fragment/head.html
@@ -6,5 +6,6 @@
 
     <link rel="stylesheet" th:href="@{'/webjars/bootstrap/5.3.8/css/bootstrap.min.css'}"/>
     <link rel="stylesheet" th:href="@{/css/style.css}"/>
-    <script th:src="@{'/webjars/bootstrap/5.3.8/js/bootstrap.bundle.min.js'}" type="application/javascript"></script>
+<!--    <script th:src="@{'/webjars/bootstrap/5.3.8/js/bootstrap.bundle.min.js'}" type="application/javascript"></script>-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </head>
