--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/fragment/navbar.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/fragment/navbar.html
@@ -32,7 +32,9 @@
 
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Profile</a></li>
+                        <li><a class="dropdown-item"
+                               th:href="@{'/customer/profile?id='+${#authentication.principal.customer.id}}">Profile</a>
+                        </li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
