--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/loginPage.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/loginPage.html
@@ -14,8 +14,7 @@
                      class="me-1" alt="login"/> <span>Login To Your Account</span>
             </h3>
             <div th:if="${param.error}"
-                 class="alert alert-danger my-2 text-center">Invalid username
-                and password.
+                 class="alert alert-danger my-2 text-center">[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]
             </div>
             <div th:if="${param.logout}"
                  class="alert alert-success my-2 text-center">You have been
