--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/profile.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/profile.html
@@ -5,22 +5,23 @@
 </head>
 <body class="d-flex flex-column min-vh-100">
 <nav th:replace="~{fragment/navbar :: navbar}"></nav>
-
-<div class="container-fluid flex-grow-1">
-    <div class="row my-2">
-        <div class="col-sm-12 col-md-8 mx-auto">
-            <form class="card p-2 mx-auto" th:action="@{'/customers/update'}"
+<div class="container flex-grow-1">
+    <div class="row">
+        <div class="col-md-10 mx-auto card mt-4 p-4">
+            <form th:action="@{'/customer/update'}"
                   method="post" th:object="${customer}" enctype="multipart/form-data">
                 <h2
                         class="my-3 text-primary d-flex justify-content-center align-items-center">
-                    <img th:src="@{/image/customer/default.svg}" alt="pic" width="60"
-                         height="60" class="mx-2"/> Update Customer
+                    <img th:src="@{/images/customer/default.svg}" alt="pic" width="60"
+                         height="60" class="mx-2"/> Update Your Information
                 </h2>
-                <div class="alert"
+
+                <div class="alert my-2"
                      th:classappend="${savedSuccessfully} ? 'alert-success' : 'alert-danger'"
                      th:if="${savingCustomer}">
                     <span th:text="${message}"></span>
                 </div>
+
                 <input type="hidden" th:name="${_csrf.parameterName}"
                        th:value="${_csrf.token}"/> <input type="hidden" name="id"
                                                           th:value="*{id}"/>
@@ -41,7 +42,7 @@
                     <label for="email">Email</label> <input type="email"
                                                             class="form-control" name="email" id="email"
                                                             th:field="*{email}"
-                                                            min="10" max="100" required/>
+                                                            min="10" max="100" readonly/>
                 </div>
                 <br/>
                 <div>
@@ -100,7 +101,7 @@
                 <br/>
                 <div class="d-flex">
                     <img alt="user"
-                         th:src="@{${customer.photo == null || customer.photo.equals('default.svg') ? '/image/customer/default.svg' : '/image/customer/'+customer.photo}}"
+                         th:src="@{${customer.photo == null || customer.photo.equals('default.svg') ? '/images/customer/default.svg' : '/images/customer/'+customer.photo}}"
                          width="60" height="60" class="mx-2"/> <input type="file"
                                                                       class="form-control" name="file"
                                                                       accept=".svg, .jpg, .jpeg, .png"/>
@@ -114,7 +115,6 @@
         </div>
     </div>
 </div>
-
- <footer th:replace="~{fragment/footer :: footer}"></footer>
+<footer th:replace="~{fragment/footer :: footer}"></footer>
 </body>
 </html>
